# engine

./: '  .gitmodules  CMakeLists.txt  COPYRIGHT.md  CPPLINT.cfg  README.md  \  main.cpp
.cache/clangd/index/: context.c.70200A6657410716.idx  egl_context.c.CF55DA7A06F85C05.idx  glad.c.AD9A936E2A82CEC7.idx  glad.h.8E33AA8ED3F36963.idx  glfw3.h.05B2046ED01D85FA.idx  glx_context.c.D5AAB25653C53E28.idx  init.c.28F8ED577EAC6291.idx  input.c.7BEB840E3A8C608E.idx  internal.h.B3AAFF8F62D84B28.idx  khrplatform.h.272B90B17F2DF18B.idx  linux_joystick.c.76F4D03247CC43D9.idx  linux_joystick.h.065DBA2EF73BA364.idx  main.cpp.126D344BDC9507FC.idx  main.cpp.CB7AC8B399C5AAFA.idx  mappings.h.77840B5B1492825E.idx  model.cpp.3225DEADF42EBAD7.idx  model.h.3DB97F850EDB582E.idx  model.h.BD50B3E283A815F6.idx  monitor.c.8CBBF20F152BBCB1.idx  null_init.c.9BE868EF17D6AC95.idx  null_joystick.c.8CAD8E406E5E678F.idx  null_joystick.h.ACC74682D53CA1CE.idx  null_monitor.c.4BACF03C3D798912.idx  null_platform.h.EDE707F041E24018.idx  null_window.c.8F5E1B9C0D8F31DA.idx  osmesa_context.c.BDDFB0E17AA95C2A.idx  platform.c.364CA08AACFC2B29.idx  platform.h.E7300F5ADA0A0933.idx  posix_module.c.411E4CE8CE5B35AF.idx  posix_poll.c.A0417663ADFBB5C2.idx  posix_poll.h.B67A9998C584C6A6.idx  posix_thread.c.4CD6A04899A1939C.idx  posix_thread.h.4F60C5FC6B124B9F.idx  posix_time.c.C3CD1F078AAA4B59.idx  posix_time.h.528833CB79A434A1.idx  vulkan.c.DF3504817A678F9D.idx  window.c.261F1FE029277242.idx  x11_init.c.89BDD58AB7847659.idx  x11_monitor.c.0D3F3E82C86E1321.idx  x11_platform.h.C30ED63DF374F8C7.idx  (+3 more)
.github/workflows/: build.yml  reviewdog.yml
include/: animation.hpp  assimp_helpers.hpp  behaviour.hpp  bone.hpp  camera.hpp  collider.hpp  collisions.hpp  engine.hpp  engine_config.hpp  font.hpp  font_manager.hpp  geometry_primitives.hpp  images.hpp  input.hpp  light.hpp  logger.hpp  manifold.hpp  material.hpp  math_types.hpp  mesh.hpp  model.hpp  modelInstance.hpp  model_manager.hpp  non_skeletal_animation.hpp  object.hpp  packed_array.hpp  path_resolver.hpp  pretty_print.hpp  render_data.hpp  rigid_body.hpp  rigidbody.hpp  shader_loader.hpp  shader_manager.hpp  shaders.hpp  skeletal_animation_data.hpp  skeletal_animations_manager.hpp  sound.hpp  text.hpp  texture.hpp  time.hpp  (+2 more)
resources/models/: Wolf_dae.dae  desktop.ini  donutpink.glb  fish.mtl  record player.fbx  wall.fbx  wall.glb
resources/models/CompanionCube/: Portal_Companion_Cube.mtl
resources/models/Lantern/: materials.mtl  materials.mtl.bak  one_mesh.mtl
resources/models/Pizza slice/: Pizza_Slice_01.mtl
resources/models/Table_Small/: material.lib
resources/models/floor/: one_mesh.mtl
resources/models/grifon/: scene.gltf
resources/models/pigeon/: license.txt  scene.gltf
resources/models/pool/: stol_collider2.mtl  table_collider_walls.mtl
resources/shaders/fragment/: image.fshader  perspective_depth.fshader  red.fshader  skeletal.fshader  standart.fshader  standart2.fshader
resources/shaders/vertex/: depth.vshader  depth_skeletal.vshader  skeletal.vshader  standart.vshader
shader_examples/fragment/: blue.fshader  green.fshader  red.fshader
shader_examples/vertex/: standart.vshader
src/: behaviour.cpp  collisions.cpp  config.cfg  config.hpp  engine.cpp  engine.hpp  geometry_primitives.cpp  main.cpp  math_types.cpp  object.cpp
src/animation/: animation.cpp
src/camera/: camera.cpp  camera.h  camera.hpp
src/components/: camera.cpp  collider.cpp  render_data.cpp  rigid_body.cpp  sound.cpp  transform.cpp
src/components/animation/: animation.cpp  skeletal_animation_data.cpp  skeletal_animations_manager.cpp
src/controller/: controller.cpp  controller.hpp
src/engine/: math.cpp  path_resolver.cpp  pretty_print.cpp  time.cpp
src/game/: classes.cpp  main.cpp  player_controller.cpp  pool.cpp
src/images/: images.cpp
src/input/: input.cpp  input.hpp
src/logging/: logger.cpp  logger.hpp
src/main/: main.cpp  main_rigidbody.cpp
src/model/: CMakeLists.txt  light.hpp  material.hpp  mesh.cpp  model.cpp  model.h  model.hpp  modelInstance.cpp  modelInstance.hpp  modelLoader.cpp  modelLoaderOLD.cpp  model_manager.cpp  transformation.cpp  transformation.hpp
src/non_skeletal_animation/: non_skeletal_animation.cpp
src/physics/: collisions.cpp  geometry_primitives.cpp  manifold.cpp  rigidbody.cpp
src/render_data/: render_data.cpp
src/shaders/: shaderLoader.cpp  shaderProgram.cpp  shader_loader.cpp  shader_loader.h  shader_loader.hpp  shader_manager.cpp  shaders.cpp
src/text/: font.cpp  font_manager.cpp  text.cpp
src/texture/: texture.cpp
src/transform/: transform.cpp  transform.hpp
